mini-rag-system/minimal-rag/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retrieval-system-yaml
  labels:
    name: retrieval-system-yaml
    environment: development
    app: retrieval-vector-storage
